npm/pkg/dataplane/testdata/netpol.yaml
# Expected combined:
# +--------+---------+---------+---------+---------+---------+---------+---------+---------+---------+
# | TCP/80 |   X/A   |   X/B   |   X/C   |   Y/A   |   Y/B   |   Y/C   |   Z/A   |   Z/B   |   Z/C   |
# | TCP/81 |         |         |         |         |         |         |         |         |         |
# | UDP/80 |         |         |         |         |         |         |         |         |         |
# | UDP/81 |         |         |         |         |         |         |         |         |         |
# +--------+---------+---------+---------+---------+---------+---------+---------+---------+---------+
# | x/a    | . . . . | . . . . | . . . . | X X X X | . . . . | . . . . | . . . . | . . . . | . . . . |
# +--------+---------+---------+---------+---------+---------+---------+---------+---------+---------+
# | x/b    | . . . . | . . . . | . . . . | . X X X | . . . . | . . . . | . . . . | . . . . | . . . . |
# +--------+---------+---------+---------+---------+---------+---------+---------+---------+---------+
# | x/c    | . . . . | . . . . | . . . . | . X X X | . . . . | . . . . | . . . . | . . . . | . . . . |
# +--------+---------+---------+---------+---------+---------+---------+---------+---------+---------+
# | y/a    | X X X X | X X X X | X X X X | X X X X | . X X X | X X X X | . X X X | . X X X | X X X X |
# +--------+---------+---------+---------+---------+---------+---------+---------+---------+---------+
# | y/b    | . . . . | . . . . | . . . . | . X X X | . . . . | . . . . | . . . . | . . . . | . . . . |
# +--------+---------+---------+---------+---------+---------+---------+---------+---------+---------+
# | y/c    | . . . . | . . . . | . . . . | . X X X | . . . . | . . . . | . . . . | . . . . | . . . . |
# +--------+---------+---------+---------+---------+---------+---------+---------+---------+---------+
# | z/a    | . . . . | . . . . | . . . . | X X X X | . . . . | . . . . | . . . . | . . . . | . . . . |
# +--------+---------+---------+---------+---------+---------+---------+---------+---------+---------+
# | z/b    | . . . . | . . . . | . . . . | X X X X | . . . . | . . . . | . . . . | . . . . | . . . . |
# +--------+---------+---------+---------+---------+---------+---------+---------+---------+---------+
# | z/c    | . . . . | . . . . | . . . . | X X X X | . . . . | . . . . | . . . . | . . . . | . . . . |
# +--------+---------+---------+---------+---------+---------+---------+---------+---------+---------+

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: base
  namespace: "y"
spec:
  egress:
    - ports:
        - port: 80
          protocol: TCP
      to:
        - namespaceSelector:
            matchExpressions:
              - key: ns
                operator: In
                values:
                  - "y"
                  - z
          podSelector:
            matchExpressions:
              - key: pod
                operator: In
                values:
                  - a
                  - b
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: ns
                operator: In
                values:
                  - x
                  - "y"
          podSelector:
            matchExpressions:
              - key: pod
                operator: In
                values:
                  - b
                  - c
      ports:
        - port: 80
          protocol: TCP
  podSelector:
    matchLabels:
      pod: a
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
    - Ingress
