npm/pkg/dataplane/testdata/npmcachev2.json
{
    "NodeName": "aks-nodepool1-74283791-vmss000001",
    "NsMap": {
        "default": {
            "Name": "default",
            "LabelsMap": {
                "kubernetes.io/metadata.name": "default"
            }
        },
        "kube-node-lease": {
            "Name": "kube-node-lease",
            "LabelsMap": {
                "kubernetes.io/metadata.name": "kube-node-lease"
            }
        },
        "kube-public": {
            "Name": "kube-public",
            "LabelsMap": {
                "kubernetes.io/metadata.name": "kube-public"
            }
        },
        "kube-system": {
            "Name": "kube-system",
            "LabelsMap": {
                "addonmanager.kubernetes.io/mode": "Reconcile",
                "control-plane": "true",
                "kubernetes.io/cluster-service": "true",
                "kubernetes.io/metadata.name": "kube-system"
            }
        },
        "x": {
            "Name": "x",
            "LabelsMap": {
                "kubernetes.io/metadata.name": "x",
                "ns": "x"
            }
        },
        "y": {
            "Name": "y",
            "LabelsMap": {
                "kubernetes.io/metadata.name": "y",
                "ns": "y"
            }
        },
        "z": {
            "Name": "z",
            "LabelsMap": {
                "kubernetes.io/metadata.name": "z",
                "ns": "z"
            }
        }
    },
    "PodMap": {
        "kube-system/coredns-69c47794-9vtmc": {
            "Name": "coredns-69c47794-9vtmc",
            "Namespace": "kube-system",
            "PodIP": "10.224.0.41",
            "Labels": {
                "k8s-app": "kube-dns",
                "kubernetes.io/cluster-service": "true",
                "pod-template-hash": "69c47794",
                "version": "v20"
            },
            "ContainerPorts": [
                {
                    "name": "dns",
                    "containerPort": 53,
                    "protocol": "UDP"
                },
                {
                    "name": "dns-tcp",
                    "containerPort": 53,
                    "protocol": "TCP"
                },
                {
                    "name": "metrics",
                    "containerPort": 9153,
                    "protocol": "TCP"
                }
            ],
            "Phase": "Running"
        },
        "kube-system/coredns-69c47794-c2987": {
            "Name": "coredns-69c47794-c2987",
            "Namespace": "kube-system",
            "PodIP": "10.224.0.15",
            "Labels": {
                "k8s-app": "kube-dns",
                "kubernetes.io/cluster-service": "true",
                "pod-template-hash": "69c47794",
                "version": "v20"
            },
            "ContainerPorts": [
                {
                    "name": "dns",
                    "containerPort": 53,
                    "protocol": "UDP"
                },
                {
                    "name": "dns-tcp",
                    "containerPort": 53,
                    "protocol": "TCP"
                },
                {
                    "name": "metrics",
                    "containerPort": 9153,
                    "protocol": "TCP"
                }
            ],
            "Phase": "Running"
        },
        "kube-system/coredns-autoscaler-5f85dc856b-m7rsz": {
            "Name": "coredns-autoscaler-5f85dc856b-m7rsz",
            "Namespace": "kube-system",
            "PodIP": "10.224.0.88",
            "Labels": {
                "k8s-app": "coredns-autoscaler",
                "pod-template-hash": "5f85dc856b"
            },
            "ContainerPorts": [],
            "Phase": "Running"
        },
        "kube-system/konnectivity-agent-7bf5785fc7-dljxt": {
            "Name": "konnectivity-agent-7bf5785fc7-dljxt",
            "Namespace": "kube-system",
            "PodIP": "10.224.0.39",
            "Labels": {
                "app": "konnectivity-agent",
                "component": "tunnel",
                "pod-template-hash": "7bf5785fc7"
            },
            "ContainerPorts": [],
            "Phase": "Running"
        },
        "kube-system/konnectivity-agent-7bf5785fc7-khlww": {
            "Name": "konnectivity-agent-7bf5785fc7-khlww",
            "Namespace": "kube-system",
            "PodIP": "10.224.0.92",
            "Labels": {
                "app": "konnectivity-agent",
                "component": "tunnel",
                "pod-template-hash": "7bf5785fc7"
            },
            "ContainerPorts": [],
            "Phase": "Running"
        },
        "kube-system/metrics-server-774f99dbf4-ggb8w": {
            "Name": "metrics-server-774f99dbf4-ggb8w",
            "Namespace": "kube-system",
            "PodIP": "10.224.0.80",
            "Labels": {
                "k8s-app": "metrics-server",
                "pod-template-hash": "774f99dbf4"
            },
            "ContainerPorts": [],
            "Phase": "Running"
        },
        "x/a": {
            "Name": "a",
            "Namespace": "x",
            "PodIP": "10.224.0.87",
            "Labels": {
                "pod": "a"
            },
            "ContainerPorts": [
                {
                    "name": "serve-80-tcp",
                    "containerPort": 80,
                    "protocol": "TCP"
                },
                {
                    "name": "serve-80-udp",
                    "containerPort": 80,
                    "protocol": "UDP"
                },
                {
                    "name": "serve-81-tcp",
                    "containerPort": 81,
                    "protocol": "TCP"
                },
                {
                    "name": "serve-81-udp",
                    "containerPort": 81,
                    "protocol": "UDP"
                }
            ],
            "Phase": "Running"
        },
        "x/b": {
            "Name": "b",
            "Namespace": "x",
            "PodIP": "10.224.0.20",
            "Labels": {
                "pod": "b"
            },
            "ContainerPorts": [
                {
                    "name": "serve-80-tcp",
                    "containerPort": 80,
                    "protocol": "TCP"
                },
                {
                    "name": "serve-80-udp",
                    "containerPort": 80,
                    "protocol": "UDP"
                },
                {
                    "name": "serve-81-tcp",
                    "containerPort": 81,
                    "protocol": "TCP"
                },
                {
                    "name": "serve-81-udp",
                    "containerPort": 81,
                    "protocol": "UDP"
                }
            ],
            "Phase": "Running"
        },
        "x/c": {
            "Name": "c",
            "Namespace": "x",
            "PodIP": "10.224.0.40",
            "Labels": {
                "pod": "c"
            },
            "ContainerPorts": [
                {
                    "name": "serve-80-tcp",
                    "containerPort": 80,
                    "protocol": "TCP"
                },
                {
                    "name": "serve-80-udp",
                    "containerPort": 80,
                    "protocol": "UDP"
                },
                {
                    "name": "serve-81-tcp",
                    "containerPort": 81,
                    "protocol": "TCP"
                },
                {
                    "name": "serve-81-udp",
                    "containerPort": 81,
                    "protocol": "UDP"
                }
            ],
            "Phase": "Running"
        },
        "y/a": {
            "Name": "a",
            "Namespace": "y",
            "PodIP": "10.224.0.70",
            "Labels": {
                "pod": "a"
            },
            "ContainerPorts": [
                {
                    "name": "serve-80-tcp",
                    "containerPort": 80,
                    "protocol": "TCP"
                },
                {
                    "name": "serve-80-udp",
                    "containerPort": 80,
                    "protocol": "UDP"
                },
                {
                    "name": "serve-81-tcp",
                    "containerPort": 81,
                    "protocol": "TCP"
                },
                {
                    "name": "serve-81-udp",
                    "containerPort": 81,
                    "protocol": "UDP"
                }
            ],
            "Phase": "Running"
        },
        "y/b": {
            "Name": "b",
            "Namespace": "y",
            "PodIP": "10.224.0.17",
            "Labels": {
                "pod": "b"
            },
            "ContainerPorts": [
                {
                    "name": "serve-80-tcp",
                    "containerPort": 80,
                    "protocol": "TCP"
                },
                {
                    "name": "serve-80-udp",
                    "containerPort": 80,
                    "protocol": "UDP"
                },
                {
                    "name": "serve-81-tcp",
                    "containerPort": 81,
                    "protocol": "TCP"
                },
                {
                    "name": "serve-81-udp",
                    "containerPort": 81,
                    "protocol": "UDP"
                }
            ],
            "Phase": "Running"
        },
        "y/c": {
            "Name": "c",
            "Namespace": "y",
            "PodIP": "10.224.0.43",
            "Labels": {
                "pod": "c"
            },
            "ContainerPorts": [
                {
                    "name": "serve-80-tcp",
                    "containerPort": 80,
                    "protocol": "TCP"
                },
                {
                    "name": "serve-80-udp",
                    "containerPort": 80,
                    "protocol": "UDP"
                },
                {
                    "name": "serve-81-tcp",
                    "containerPort": 81,
                    "protocol": "TCP"
                },
                {
                    "name": "serve-81-udp",
                    "containerPort": 81,
                    "protocol": "UDP"
                }
            ],
            "Phase": "Running"
        },
        "z/a": {
            "Name": "a",
            "Namespace": "z",
            "PodIP": "10.224.0.68",
            "Labels": {
                "pod": "a"
            },
            "ContainerPorts": [
                {
                    "name": "serve-80-tcp",
                    "containerPort": 80,
                    "protocol": "TCP"
                },
                {
                    "name": "serve-80-udp",
                    "containerPort": 80,
                    "protocol": "UDP"
                },
                {
                    "name": "serve-81-tcp",
                    "containerPort": 81,
                    "protocol": "TCP"
                },
                {
                    "name": "serve-81-udp",
                    "containerPort": 81,
                    "protocol": "UDP"
                }
            ],
            "Phase": "Running"
        },
        "z/b": {
            "Name": "b",
            "Namespace": "z",
            "PodIP": "10.224.0.13",
            "Labels": {
                "pod": "b"
            },
            "ContainerPorts": [
                {
                    "name": "serve-80-tcp",
                    "containerPort": 80,
                    "protocol": "TCP"
                },
                {
                    "name": "serve-80-udp",
                    "containerPort": 80,
                    "protocol": "UDP"
                },
                {
                    "name": "serve-81-tcp",
                    "containerPort": 81,
                    "protocol": "TCP"
                },
                {
                    "name": "serve-81-udp",
                    "containerPort": 81,
                    "protocol": "UDP"
                }
            ],
            "Phase": "Running"
        },
        "z/c": {
            "Name": "c",
            "Namespace": "z",
            "PodIP": "10.224.0.42",
            "Labels": {
                "pod": "c"
            },
            "ContainerPorts": [
                {
                    "name": "serve-80-tcp",
                    "containerPort": 80,
                    "protocol": "TCP"
                },
                {
                    "name": "serve-80-udp",
                    "containerPort": 80,
                    "protocol": "UDP"
                },
                {
                    "name": "serve-81-tcp",
                    "containerPort": 81,
                    "protocol": "TCP"
                },
                {
                    "name": "serve-81-udp",
                    "containerPort": 81,
                    "protocol": "UDP"
                }
            ],
            "Phase": "Running"
        }
    },
    "SetMap": {
        "azure-npm-107991907": "podlabel-k8s-app:coredns-autoscaler",
        "azure-npm-1213884878": "namedport:serve-81-tcp",
        "azure-npm-1228747572": "podlabel-pod-template-hash:7bf5785fc7",
        "azure-npm-1343132199": "podlabel-version",
        "azure-npm-1385180724": "podlabel-pod-template-hash",
        "azure-npm-1529935048": "podlabel-component:tunnel",
        "azure-npm-1639206293": "nslabel-all-namespaces",
        "azure-npm-1802501696": "nslabel-kubernetes.io/cluster-service",
        "azure-npm-1883894896": "ns-kube-node-lease",
        "azure-npm-1889013859": "podlabel-pod-template-hash:69c47794",
        "azure-npm-1923986458": "podlabel-kubernetes.io/cluster-service",
        "azure-npm-1977654781": "nslabel-kubernetes.io/metadata.name:kube-system",
        "azure-npm-2064349730": "ns-kube-system",
        "azure-npm-2075916349": "namedport:serve-80-udp",
        "azure-npm-2095721080": "nslabel-ns:z",
        "azure-npm-2129276318": "nslabel-ns:x",
        "azure-npm-2146053937": "nslabel-ns:y",
        "azure-npm-2186870374": "ns-kube-public",
        "azure-npm-2261148835": "nslabel-control-plane",
        "azure-npm-2293485820": "podlabel-pod",
        "azure-npm-2540899149": "podlabel-k8s-app",
        "azure-npm-2547206700": "podlabel-pod-template-hash:774f99dbf4",
        "azure-npm-2647803239": "nslabel-control-plane:true",
        "azure-npm-2682470511": "nestedlabel-y/test-policy:pod:a:b",
        "azure-npm-2714724634": "podlabel-k8s-app:kube-dns",
        "azure-npm-2764516068": "nslabel-addonmanager.kubernetes.io/mode",
        "azure-npm-2837910840": "ns-y",
        "azure-npm-2854688459": "ns-x",
        "azure-npm-2888243697": "ns-z",
        "azure-npm-2937511974": "nslabel-kubernetes.io/metadata.name",
        "azure-npm-2965211778": "namedport:metrics",
        "azure-npm-2977804918": "podlabel-k8s-app:metrics-server",
        "azure-npm-3059925008": "podlabel-component",
        "azure-npm-3548820133": "nslabel-kubernetes.io/metadata.name:kube-public",
        "azure-npm-3692662174": "namedport:serve-81-udp",
        "azure-npm-3717707100": "podlabel-app",
        "azure-npm-3731293995": "nslabel-kubernetes.io/metadata.name:kube-node-lease",
        "azure-npm-3872074864": "podlabel-pod:b",
        "azure-npm-3888852483": "podlabel-pod:c",
        "azure-npm-3922407721": "podlabel-pod:a",
        "azure-npm-397063964": "podlabel-pod-template-hash:5f85dc856b",
        "azure-npm-3993150488": "podlabel-kubernetes.io/cluster-service:true",
        "azure-npm-3999554562": "nslabel-kubernetes.io/cluster-service:true",
        "azure-npm-406267145": "nslabel-kubernetes.io/metadata.name:default",
        "azure-npm-4150775300": "nslabel-kubernetes.io/metadata.name:x",
        "azure-npm-4167552919": "nslabel-kubernetes.io/metadata.name:y",
        "azure-npm-4184330538": "nslabel-kubernetes.io/metadata.name:z",
        "azure-npm-4272224941": "podlabel-app:konnectivity-agent",
        "azure-npm-4284971813": "namedport:serve-80-tcp",
        "azure-npm-483924252": "nslabel-ns",
        "azure-npm-55798953": "nestedlabel-y/test-policy:pod:b:c",
        "azure-npm-708060905": "podlabel-version:v20",
        "azure-npm-71974944": "namedport:dns",
        "azure-npm-784554818": "ns-default",
        "azure-npm-917915898": "namedport:dns-tcp",
        "azure-npm-984584486": "nslabel-addonmanager.kubernetes.io/mode:Reconcile"
    }
}
